[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Balivia.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/Menu.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Buttons/StartButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/Fade.tscn" type="PackedScene" id=5]
[ext_resource path="res://Buttons/OptionsButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Font.tres" type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=1]
size = 52
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -34, -113 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Fade" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false
color = Color( 0, 0, 0, 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 192.0
margin_top = 108.0
margin_right = 1728.0
margin_bottom = 972.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1536.0
margin_bottom = 162.18
rect_min_size = Vector2( 0, 162.18 )
texture = ExtResource( 3 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 166.0
margin_right = 1536.0
margin_bottom = 797.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 766.0
margin_bottom = 631.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="Start" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 148.0
margin_right = 766.0
margin_bottom = 317.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 6 )]
margin_top = 337.0
margin_right = 766.0
margin_bottom = 483.0
rect_min_size = Vector2( 500, 146 )

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 770.0
margin_right = 1536.0
margin_bottom = 631.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 351.0
margin_top = 283.0
margin_right = 415.0
margin_bottom = 347.0
texture = ExtResource( 3 )

[node name="Version" type="Label" parent="Menu"]
margin_top = 801.0
margin_right = 1536.0
margin_bottom = 864.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Version 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options_menu(Dodelay_kogda-nibud_potom)" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Zatemnenije" type="ColorRect" parent="Options_menu(Dodelay_kogda-nibud_potom)"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.239216 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interface" type="Control" parent="Options_menu(Dodelay_kogda-nibud_potom)"]
margin_left = 300.0
margin_top = 100.0
margin_right = 1620.0
margin_bottom = 980.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Borders" type="ReferenceRect" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0, 0, 0, 1 )
border_width = 12.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fon" type="ColorRect" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.25098, 0.168627, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up_Buttons" type="HBoxContainer" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface/Menu"]
margin_right = 1320.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 77 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics" type="Button" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface/Menu/Up_Buttons"]
margin_right = 327.0
margin_bottom = 77.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Graphics"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Button" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface/Menu/Up_Buttons"]
margin_left = 331.0
margin_right = 658.0
margin_bottom = 77.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gameplay" type="Button" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface/Menu/Up_Buttons"]
margin_left = 662.0
margin_right = 989.0
margin_bottom = 77.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Gameplay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Language" type="Button" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface/Menu/Up_Buttons"]
margin_left = 993.0
margin_right = 1320.0
margin_bottom = 77.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface/Menu"]
margin_top = 81.0
margin_right = 1320.0
margin_bottom = 880.0
size_flags_vertical = 3

[node name="Name_Button" type="HBoxContainer" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface/Menu/Buttons"]
margin_right = 1320.0
margin_bottom = 799.0
size_flags_vertical = 3

[node name="Graphic" type="TextEdit" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface/Menu/Buttons/Name_Button"]
margin_right = 658.0
margin_bottom = 799.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Graphic:"

[node name="Graphic_button" type="Button" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface/Menu/Buttons/Name_Button"]
margin_left = 662.0
margin_right = 1320.0
margin_bottom = 799.0
size_flags_horizontal = 3

[node name="Graphic_type" type="PopupMenu" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface/Menu/Buttons/Name_Button/Graphic_button"]
margin_right = 658.0
margin_bottom = 799.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface/Menu/Buttons/Name_Button/Graphic_button/Graphic_type"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -595.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="Button" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface/Menu/Buttons/Name_Button/Graphic_button/Graphic_type/VBoxContainer"]
margin_right = 658.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Options_menu(Dodelay_kogda-nibud_potom)/Interface/Menu/Buttons/Name_Button/Graphic_button/Graphic_type/VBoxContainer"]
margin_top = 104.0
margin_right = 658.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/CenterRow/Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Options_menu(Dodelay_kogda-nibud_potom)/Interface/Menu/Buttons/Name_Button/Graphic_button" to="." method="_on_Button_pressed"]
